# PECESolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: part-1.json  part-2-1-1.json  part-2-1-2.json  part-2-1-3.json  part-2-1-4.json  part-2-1-5.json  part-2-1-6.json  part-2-2-1.json  part-2-2-2.json  part-2-2-3.json  part-2-2-4.json  part-2-3-1.json  part-2-3-2.json  part-2-3-3.json  part-2-3-4.json
include/: ode.h  plot.h  solver.h
script/: plot.py
src/: main.cpp
