cmake_minimum_required(VERSION 3.24)
project(pece LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/spdlog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/googletest)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/eigen)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/json)
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog Eigen3::Eigen nlohmann_json gtest gtest_main)